Implementacion del swagger manual.
