# app/Http/Controllers/Api/RolController.php
@@ -17,6 +17,49 @@ use Throwable;
 class RolController extends Controller
 {
     use ResponseTrait;
+
+    /**
+     * Función para listar todos los roles
+     * @OA\Get (
+     *     path="/api/rol",
+     *     tags={"Roles"},
+     *     operationId="listRoles",
+     *     @OA\Response(
+     *         response=200,
+     *         description="Peticion realizada con exito",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 type="array",
+     *                 property="rows",
+     *                 @OA\Items(
+     *                     type="object",
+     *                     @OA\Property(
+     *                         property="offset",
+     *                         type="number",
+     *                         example="0"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="limit",
+     *                         type="number",
+     *                         example="0"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="nombre",
+     *                         type="string",
+     *                         example="string"
+     *                     ),
+     *                     @OA\Property(
+     *                         property="estado",
+     *                         type="boolean",
+     *                         example="true"
+     *                     )
+     *                 )
+     *             )
+     *         )
+     *     )
+     * )
+     */
+
     public function index(Request $request)
     {
         try {
@@ -50,6 +93,28 @@ class RolController extends Controller
             throw $e;
         }
     }
+
+    /**
+     * Función para crear un nuevo rol
+     * @OA\Post (
+     *     path="/api/rol",
+     *     tags={"Roles"},
+     *     operationId="InsertRoles",
+     *     @OA\RequestBody(
+     *          required=true,
+     *              description="Datos de la sede a actualizar",
+     *              @OA\JsonContent(
+     *              @OA\Property(property="nombre_rol", type="string", example="string"),
+     *              @OA\Property(property="estado", type="boolean", example=true)
+     *          )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Peticion realizada con exito",
+     *     )
+     * )
+     */
+
     public function store(Request $request)
     {
         try {
@@ -85,6 +150,32 @@ class RolController extends Controller
         }
     }
 
+    /**
+     * Función para ver detalles por rol
+     * @OA\Get (
+     *     path="/api/rol/{id}",
+     *     tags={"Roles"},
+     *     operationId="SelectRolOfId",
+     *     @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         description="ID del rol",
+     *         @OA\Schema(type="number")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="OK",
+     *         @OA\JsonContent(
+     *              @OA\Property(property="id", type="integer", description="ID del rol", example=0),
+     *              @OA\Property(property="nombre", type="string", description="Nombre del rol", example="string"),
+     *              @OA\Property(property="codigo", type="string", description="Codigo del rol", example="string"),
+     *              @OA\Property(property="estado", type="boolean", description="Estado del rol"),
+     *         )
+     *     )
+     * )
+     */
+
     public function show($id)
     {
 
@@ -102,6 +193,37 @@ class RolController extends Controller
         }
     }
 
+    /**
+     * Función para actulizar los roles
+     * @OA\Put (
+     *     path="/api/rol/{id}",
+     *     tags={"Roles"},
+     *     operationId="UpdateRol",
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         description="ID del rol a actualizar",
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\RequestBody(
+     *          required=true,
+     *              description="Datos de la sede a actualizar",
+     *              @OA\JsonContent(
+     *              @OA\Property(property="nombre_rol", type="string", example="string"),
+     *              @OA\Property(property="estado", type="boolean", example=true)
+     *          )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Sede actualizada exitosamente"
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="Sede no encontrada"
+     *     )
+     * )
+     */
 
     public function update(Request $request, $id)
     {
@@ -127,6 +249,29 @@ class RolController extends Controller
         }
     }
 
+    /**
+     *  Función para cambiar de estado del rol
+     *      @OA\Delete(
+     *          path="/api/rol/{id}",
+     *          tags={"Roles"},
+     *          operationId="DeleteRol",
+     *      @OA\Parameter(
+     *         in="path",
+     *         name="id",
+     *         required=true,
+     *         description="ID del rol",
+     *         @OA\Schema(type="number")
+     *     ),
+     *      @OA\Response(
+     *         response=200,
+     *         description="Peticion realizada con exito",
+     *     ),
+     *      @OA\Response(
+     *          response=404,
+     *          description="Sede no encontrado"
+     *      )
+     *  )
+ */
 
     public function delete($id)
     {
